# ModernOCR

./: CMakeLists.txt  README.md
cmake/: utils.cmake
modules/: CMakeLists.txt
modules/AngleNet/: AngleNet.cpp  AngleNet.h  CMakeLists.txt
modules/CrnnNet/: CMakeLists.txt  CrnnNet.cpp  CrnnNet.h
modules/DbNet/: CMakeLists.txt  DbNet.cpp  DbNet.h
modules/EXE/: CMakeLists.txt  main.cpp
modules/OcrLite/: CMakeLists.txt  OcrLite.cpp  OcrLite.h
modules/Test/: CMakeLists.txt  ocr_types.cpp  ocr_types.h
modules/core/: CMakeLists.txt  inference.cpp  inference.h  modernocr.h  operators.cpp  operators.h  types.h  utils.cpp  utils.h
modules/utils/: CMakeLists.txt  INIReader.h  OcrStruct.h  OcrUtils.cpp  OcrUtils.h  operators.cpp  operators.h  types.h
script/: build.bat  test.bat
